--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body>
     <nav>
-      <a href="index.html" id="logo">Fun Bus</a>
+      <a href="index.html" id="logo"><h1>Fun Bus</h1></a>
       <div class="toggle-bars">
         <div class="bar"></div>
         <div class="bar"></div>
@@ -34,10 +34,11 @@
     </nav>
 
     <div class="container home">
+      <div class="img-content-header">
+        <img src="img/bus.jpg" alt="A yellow toy bus on sand" />
+      </div>
+
       <header>
-        <div class="img-content">
-          <img src="img/fun-bus.jpg" alt="A yellow toy bus on sand" />
-        </div>
         <div class="text-content">
           <h2>Welcome To Fun Bus</h2>
           <p>
@@ -125,11 +126,11 @@
           <div class="btn">Sign Me Up!</div>
         </div>
       </section>
+      <footer class="footer">
+        <p>Copyright Fun Bus 2018</p>
+      </footer>
     </div>
-    <!-- container -->
-    <footer class="footer">
-      <p>Copyright Fun Bus 2018</p>
-    </footer>
+
     <script src="index.js"></script>
   </body>
 </html>
